--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
                 </div>
                  <div class="preview-card">
                     <div class="preview-image">
-                        <img src="rhythm of universe.jpg" alt="Rhythm of Universe - Acrylic artwork">
+                        <img src="Randomness.jpg" alt="Rhythm of Universe - Acrylic artwork">
                     </div>
                     <div class="preview-content">
-                        <h3>Rhythm of Universe</h3>
+                        <h3>Randomness</h3>
                         <p>Acrylic • 11.7" × 16.5"</p>
                     </div>
                 </div>
@@ -240,4 +240,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
